skattjakt/infrastructure/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skattjakt
  namespace: skattjakt
spec:
  tls:
    - hosts: [skattjakt-staging.internal]
      secretName: skattjakt-tls
  rules:
    - host: skattjakt-staging.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skattjakt-api
                port:
                  name: http
